Fix following Google fonts weigth change

--- a/src/blog/themes/simple/templates/base.html
+++ b/src/blog/themes/simple/templates/base.html
@@ -17,7 +17,7 @@
         <script src="../google-analytics.js"></script>
 
         <!-- Fonts -->
-        <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,600' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 
         <!-- mathjax -->
@@ -29,7 +29,7 @@
         </style>
 
         <!-- Customised stylesheets -->
-        <link href="https://pascalbugnion.net/main.css" rel="stylesheet">
+        <link href="/main.css" rel="stylesheet">
         <link href="theme/css/blog.css" rel="stylesheet">
 
         {% block custom_styles %}
