--- a/src/blog/themes/simple/templates/base.html
+++ b/src/blog/themes/simple/templates/base.html
@@ -8,6 +8,7 @@
         <meta charset="utf-8" />
         <script src="https://code.jquery.com/jquery.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
          <!-- Twitter Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
