--- a/src/landing.css
+++ b/src/landing.css
@@ -23,7 +23,7 @@
 }
 
 #cover-heading {
-  margin-bottom: 1em;
+  margin-bottom: 1.8em;
 }
 
 /* Background image */
@@ -33,4 +33,12 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+.inner-cover {
+    text-shadow: none;
+}
+
+.inner-cover .lead {
+    font-size : 2.0em;
 }
