--- a/src/landing.css
+++ b/src/landing.css
@@ -28,7 +28,7 @@
 
 /* Background image */
 body {
-  background: url(img/images.jpeg) no-repeat center center fixed;
+  background: url(img/landing.jpeg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
