--- a/src/main.css
+++ b/src/main.css
@@ -60,6 +60,18 @@ code {
     margin-top : 30px ;
 }
 
+/* Page headers */
+
+.page-header {
+    border-bottom: 1px solid #eee;
+    margin-bottom: 20px;
+    padding-bottom: 9px;
+}
+
+.page-header h1 {
+    font-size: 2.3rem;
+}
+
 /* Tab panels */
 
 
