--- a/src/blog/themes/simple/templates/base.html
+++ b/src/blog/themes/simple/templates/base.html
@@ -73,7 +73,7 @@
             <li class="nav-item"><a href="/code.html" class="nav-link">Code</a></li>
             <li class="nav-item"><a href="/talks.html" class="nav-link">Talks</a></li>
             <li class="nav-item"><a href="http://www.scala4datascience.com" class="nav-link">Book</a></li>
-            <li class="nav-item active"><a href="blog/index.html" class="nav-link">Blog</a></li>
+            <li class="nav-item active"><a href="/blog/index.html" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="/contact.html" class="nav-link">About</a></li>
           </ul>
         </div>
