--- a/src/main.css
+++ b/src/main.css
@@ -19,6 +19,10 @@ h2 {
     padding-bottom : 0.3em ;
 }
 
+a {
+    color: #428bca;
+}
+
 .lead {
     font-size : 1.2em ;
 }
@@ -66,9 +70,6 @@ h2 {
 .page-header h1 {
     font-size: 2.3rem;
 }
-
-/* Tab panels */
-
 
 /* Navbar */
 
