Fix excessive whitespace in blog card

--- a/src/blog/themes/simple/templates/index.html
+++ b/src/blog/themes/simple/templates/index.html
@@ -19,13 +19,13 @@ body {
     background: #fff;
     margin: 0 0 20px 0;
     overflow: hidden;
-    padding: 20px;
+    padding: 20px 20px 5px 20px;
     border: 1px solid #ccc;
     box-shadow: 0px 3px 8px 0px #ccc;
 }
 
 .article-index-container {
-  padding-top: 90px;
+    padding-top: 90px;
 }
 </style>
 {% endblock %}
