--- a/src/main.css
+++ b/src/main.css
@@ -5,9 +5,9 @@ body {
     font-weight : 300 ;
 }
 
-.container {
-    max-width : 800px ;
-}
+/* .container { */
+/*     max-width : 800px ; */
+/* } */
 
 h1 {
     font-family : 'Josefin Sans', sans-serif ;
@@ -31,32 +31,6 @@ a {
     padding-top: 100px;
     font-size : 18px ;
     padding-bottom : 2em ;
-}
-
-.codesample {
-    margin-top : 1em ;
-    margin-bottom : 1em ;
-    line-height : 125% ;
-}
-
-.code-link-button + .code-link-button {
-    margin-left : 50px ;
-}
-
-.code-link-button {
-    background-color : white ;
-    border-color : #ddd ;
-    color : inherit ;
-}
-
-
-.code-link-button:hover {
-    background-color : #ddd ;
-}
-
-.code-link-button-container {
-    text-align : center ;
-    margin-top : 30px ;
 }
 
 /* Page headers */
