--- a/src/blog/themes/simple/templates/base.html
+++ b/src/blog/themes/simple/templates/base.html
@@ -41,7 +41,7 @@
 
 <body id="index" class="home">
     <nav class="navbar navbar-expand-md navbar-light fixed-top" id="top-navbar">
-      <div class="container">
+      <div class="container blog-navbar-container">
         <a class="navbar-brand" href="/index.html">Pascal Bugnion</a>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav">
