--- a/src/blog/themes/simple/templates/base.html
+++ b/src/blog/themes/simple/templates/base.html
@@ -7,6 +7,7 @@
         <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="This is Pascal Bugnion's personal blog. It contains tutorials and opinions on programming, maths and data." />
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
          <!-- Twitter Bootstrap -->
