--- a/src/blog/themes/simple/templates/index.html
+++ b/src/blog/themes/simple/templates/index.html
@@ -26,6 +26,11 @@
  .entry-content {
    font-size: 18px;
  }
+
+ #post-list {
+   padding : 0 0 0 0 ;
+   list-style-type : none ;
+ }
 </style>
 {% endblock %}
 
