Use same margin for pre as for p

--- a/src/blog/themes/simple/static/css/blog.css
+++ b/src/blog/themes/simple/static/css/blog.css
@@ -27,7 +27,7 @@
 
 .article-entry-content pre {
     padding: 9.5px;
-    margin: 0 0 10px;
+    margin: 0 0 1rem;
     font-size: 13px;
     line-height: 1.43;
     background-color: #f5f5f5;
