Add padding to h2 in blog articles

--- a/src/blog/themes/simple/static/css/blog.css
+++ b/src/blog/themes/simple/static/css/blog.css
@@ -40,6 +40,10 @@
     font-size: 75%;
 }
 
+.article-entry-content h2 {
+    padding-top: 0.4em;
+}
+
 /* Ipython notebook */
 
 .code_cell .input_prompt {
